--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> <meta name="google-site-verification" content="JHH_Idtx3NNgFmYCdnSRWl1Jy-N3Yt2OkBUh-zkyXcI" />
 <title>Sandro Omar Oliden Cornejo</title>
 </head>
 <body style="background-color:skyblue;font-size:150%;">
