--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@ Actualmente vivo en el distrito de <a href="https://es.wikipedia.org/wiki/Distri
 </p>
 <p style="color:gold;"> Mi plato favorito es la papa a la huancaína <a href="https://es.wikipedia.org/wiki/Papa_a_la_huanca%C3%ADna"> Papa a la Huancaína </a>
 </p>
-
+<p style="color:blue;"> <a href="https://danielquispeccorahua123.000webhostapp.com"> Daniel quispe Ccorahua </a>
+</p>
+<p style="color:orange;"> <a href="https://jhanfrancoperezancieta.000webhostapp.com/"> Jhan Franco Perez Ancieta </a>
+</p>
+<p style="color:orange;"> <a href="https://www.jesusalonsosalazarmallqui.me/"> Jesus alonso salazar </a>
+</p>
+<p style="color:orange;"> <a href="https://rocac.github.io/"> Roberto Carlos Nuñez </a>
+</p>
+<p style="color:orange;"> <a href="https://www.fabianimanolojedavalero.me/"> Fabian Imanol </a>
+</p>
+<p style="color:orange;"> <a href="https://www.brayanelmercampossanchez.me/"> Brayan Campos Sanchez </a>
+</p>
 </body>
 </html>
